gcc/testsuite/rust/rustc/ui/occurs-check.rs
fn main() {
    let f;
    f = Box::new(f);
// { dg-error ".E0275." "" { target *-*-* } .-1 }
}

